app-dev/Step_6_ExposeSpringBootAppIngress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: geosearch
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: geosearch.user1.cluster.mcnichol.rocks
    http:
      paths:
      - path: /
        backend:
          serviceName: geosearch
          servicePort: http
